<resources>
    <string name="app_name">VicRoads License Test</string>
    <string name="question">Question</string>
    <string name="score">Score</string>
    <string name="button">Button</string>
    <string name="button1">Button</string>
    <string name="button2">Button</string>
    <string name="home">Home</string>
    <string name="try_again">Try again</string>
    <string name="good">Good!</string>
    <string name="pass_fail">Pass/Fail</string>
    <string name="_6_10">6/10</string>
    <string name="Article">Button</string>
    <string name="Quiz">Button</string>
    <string name="Result">Button</string>
    <string name="Preparation" />
    <string name="articles">Articles</string>
    <string name="quiz">Quiz</string>
    <string name="result">Result</string>

    <string name="question_image">Question Image</string>

    <string name="previous">Previous</string>
    <string name="next">Next</string>

    <string name="text_complete">Complete</string>
    <string name="text_next">Next</string>
    <string name="format_x_of_y">%d of %d</string>
    <string name="title_quiz">Quiz</string>

    <string name="title_practice">Practice</string>

    <string name="skip_dialog_title">Question skipped</string>
    <string name="skip_dialog_message">%d question(s) have been skipped. Do you wish to continue?</string>
    <string name="skip_dialog_positive_text">Continue</string>
    <string name="skip_dialog_negative_text">Go back</string>

    <string name="feedback_success">Nice!</string>
    <string name="feedback_fail">Opps!</string>
    <string name="display_result_format">%d/%d</string>
    <string name="title_result">Result</string>

    <string name="result_pass_or_fail">Result: Pass or Fail</string>
    <string name="practice_quiz">Practice Quiz</string>
    <string name="quizhistory">QuizHistory</string>
    <string name="quit">Quit</string>
    <string name="test_quiz">Test Quiz</string>

    <string name="open">open</string>
    <string name="close">close</string>
    <string name="dashboard">Dashboard</string>
    <string name="article">Article</string>
    <string name="video">Video</string>
    <string name="startquiz">StartQuiz</string>
    <string name="feedback">Feedback</string>
    <string name="logout">Logout</string>

    <string name="submit">Submit</string>
    <string name="clear">Clear</string>




</resources>