<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/activiy_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="372dp"
        android:layout_height="214dp"
        android:layout_above="@+id/button"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:text="@string/question"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="26dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/score"
        android:textAlignment="center"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="60dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="374dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="205dp"
        android:text="@string/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="332dp"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/button1"
        android:layout_width="374dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginBottom="35dp"
        android:text="@string/button1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="393dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="374dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginBottom="115dp"
        android:text="@string/button2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</RelativeLayout>